@@ -1,3 +1,7 @@
+2018-06-07  Danilo Chang
+
+    * Update source code, use LIBVLC_VERSION_INT to check VLC version
+
 2017-01-09  Danilo Chang
 
     * Bump version to 0.3
